Added most html divs, classes, headings and text

--- a/index.html
+++ b/index.html
@@ -24,11 +24,104 @@
   <script src="https://kit.fontawesome.com/0d89128a85.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
 </head>
-
-<body>
-
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <body>
+    <header>
+      <div class="content-wrapper">
+        <div class="header-divider"</div>
+        <nav>
+          <ul>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+    </header>
+
+  <main>
+    <section class="hero-area">
+      <div class="contact-wrapper">
+        <h1> Hey! what can I code for you today?</h1>
+      </div>
+    </section>
+    <section id="portfolio">
+      <section class ="portfolio-area">
+        <div class="content-wrapper">
+          <h3>My Portfolio</h3>
+          <div class="rogue">
+            <figure>
+              <img src="img/rogue.png" alt="Rogue Pickings Website" />
+            </figure>
+            <div>
+            <h4>Rogue Pickings Website</h4>
+            <p>A responsive, one-page site coded in html 5 and cssusing a psd design comp.</p>
+            </div>
+          </div>
+          <div class="recipe">
+            <div>
+              <h4>Recipe Collection</h4>
+              <p>A simple, one-page recipe card coded in html andcss, using a design guide and an image guide. This wasone of the first sites I coded.</p>
+            </div>
+            <figure>
+              <img src="img/recipe.png" alt="Recipe Collection Cards" />
+            </figure>
+          </div>
+          <div class="unplugged">
+            <figure>
+              <img src="img/unplugged.png" alt="Unplugged Retreat Website" />
+            </figure>
+            <div>
+            <h4>Unplugged Retreat Website</h4>
+            <p>A mobile-first, 3-page, fully responsive website,coded from scratch from a psd design comp. I had a lotof fun coding this project!</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+    <section id="about">
+      <section class="about-area">
+        <div class="content-wrapper">
+          <h3>About Me</h3>
+          <h4>I love creating and coding things!</h4>
+          <p>Some biography bits here</p>
+        </div>
+      </section>
+    </section>
+  </main>
+
+  <footer>
+    <section id="contact">
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <h2>Let's Talk!</h2>
+          <div class="contact">
+            <h3>Hire me</h3>
+            <address>
+              <p>nik [@] nikpayton.com</p>
+            </address>
+          </div>
+          <div class="social">
+            <h3>Follow Me</h3>
+          </div>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.linkedin.com/in/nikpayton/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </p>
+            <p>
+              <a href="https://twitter.com/nikpayton" target="_blank"><i class="fab fa-twitter"></i></a>
+            </p>
+            <p>
+              <a href="https://github.com/niko1402" target="_blank"><i class="fab fa-github"></i></a>
+            </p>
+          </div>
+        </div> <!--- Footer Content ends here --->
+        <div class="copyright">
+          <p> Copyright 2021 | Nik Payton</p>
+        </div>
+      </div>
+    </section>
+  </footer>
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
