--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
   <body>
     <header>
       <div class="content-wrapper">
-        <div class="header-divider"</div>
+        <h2>nik payton | web designer</h2>
+        <div class="header-divider"></div>
         <nav>
           <ul>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#contact">contact</a></li>
           </ul>
         </nav>
+      </div>
     </header>
 
   <main>
     <section class="hero-area">
       <div class="contact-wrapper">
-        <h1> Hey! what can I code for you today?</h1>
+        <h1> Hi! What can I <span>code</span> for you today?</h1>
       </div>
     </section>
     <section id="portfolio">
