Changed image sizes for portfolio. Added colour text styles to css, reversed flow on recipe card, resized p fonts

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
   <meta name="theme-color" content="#fafafa">
 </head>
   <!-- Add your site or application content here -->
-  <body>
+<body>
+
     <header>
       <div class="content-wrapper">
-        <h2>nik payton | web designer</h2>
+        <h3>nik payton | web designer</h3>
         <div class="header-divider"></div>
         <nav>
           <ul>
@@ -51,31 +52,42 @@
         <div class="content-wrapper">
           <h3>My Portfolio</h3>
           <div class="rogue">
-            <figure>
-              <img src="img/rogue.png" alt="Rogue Pickings Website" />
-            </figure>
-            <div>
-            <h4>Rogue Pickings Website</h4>
-            <p>A responsive, one-page site coded in html 5 and cssusing a psd design comp.</p>
-            </div>
+            <article>
+              <figure>
+                <img src="img/rogue.png" alt="Rogue Pickings Website" />
+              </figure>
+              <div>
+                <h4>Rogue Pickings Website</h4>
+                <p>HTML and CSS from a Photoshop design comp</p>
+                <p>A responsive, one-page site.</p>
+              </div>
+            </article>
           </div>
+          <div class="header-divider"></div>
           <div class="recipe">
-            <div>
-              <h4>Recipe Collection</h4>
-              <p>A simple, one-page recipe card coded in html andcss, using a design guide and an image guide. This wasone of the first sites I coded.</p>
-            </div>
-            <figure>
-              <img src="img/recipe.png" alt="Recipe Collection Cards" />
-            </figure>
+            <article>
+              <div>
+                <h4>Recipe Collection</h4>
+                <p>An HTML5 and CSS exercise</p>
+                <p>A simple, one-page recipe card coded in html5 and css, from a design guide and an image guide. This was one of the first sites I coded.</p>
+              </div>
+              <figure>
+              <img src="img/recipe1.png" alt="Recipe Collection Cards" />
+              </figure>
+            </article>
           </div>
+          <div class="header-divider"></div>
           <div class="unplugged">
-            <figure>
-              <img src="img/unplugged.png" alt="Unplugged Retreat Website" />
-            </figure>
-            <div>
-            <h4>Unplugged Retreat Website</h4>
-            <p>A mobile-first, 3-page, fully responsive website,coded from scratch from a psd design comp. I had a lotof fun coding this project!</p>
-            </div>
+            <article>
+              <figure>
+                <img src="img/unplugged.png" alt="Unplugged Retreat Website" />
+              </figure>
+              <div>
+                <h4>Unplugged Retreat Website</h4>
+                <p>HTML5 and CSS from a photoshop comp</p>
+                <p>A mobile-first, 3-page, fully responsive website, coded from scratch from a psd design comp. I had a lot of fun coding this project!</p>
+              </div>
+            </article>
           </div>
         </div>
       </section>
@@ -85,7 +97,8 @@
         <div class="content-wrapper">
           <h3>About Me</h3>
           <h4>I love creating and coding things!</h4>
-          <p>Some biography bits here</p>
+          <p>Hi! I’m Nik, a British jazz musician and web developer currently living in Brazil. I’ve toured extensively throughout Europe and the Americas, been an Artistic Director (of one of the biggest jazz festivals in Brazil), and an English instructor.<br />
+          I have an obsessive need to learn new things, and the pandemic gave me the chance to finally learn to code with Skillcrush. I love nothing more than being challenged, and I’m very focused and persistent when it comes to work. So, whatever your web needs are, I can create the perfect solution for you!</p>
         </div>
       </section>
     </section>
@@ -97,29 +110,29 @@
         <div class="footer-content">
           <h2>Let's Talk!</h2>
           <div class="contact">
-            <h3>Hire me</h3>
+            <h4>Hire me</h4>
             <address>
               <p>nik [@] nikpayton.com</p>
             </address>
           </div>
           <div class="social">
-            <h3>Follow Me</h3>
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p>
+                <a href="https://www.linkedin.com/in/nikpayton/" target="_blank"><i class="fab fa-linkedin"></i></a>
+              </p>
+              <p>
+                <a href="https://twitter.com/nikpayton" target="_blank"><i class="fab fa-twitter"></i></a>
+              </p>
+              <p>
+                <a href="https://github.com/niko1402" target="_blank"><i class="fab fa-github"></i></a>
+              </p>
+            </div>
           </div>
-          <div class="social-icons">
-            <p>
-              <a href="https://www.linkedin.com/in/nikpayton/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            </p>
-            <p>
-              <a href="https://twitter.com/nikpayton" target="_blank"><i class="fab fa-twitter"></i></a>
-            </p>
-            <p>
-              <a href="https://github.com/niko1402" target="_blank"><i class="fab fa-github"></i></a>
-            </p>
-          </div>
-        </div> <!--- Footer Content ends here --->
-        <div class="copyright">
-          <p> Copyright 2021 | Nik Payton</p>
         </div>
+      </div> <!--- Footer Content ends here --->
+      <div class="copyright">
+        <p> Copyright 2021 | Nik Payton</p>
       </div>
     </section>
   </footer>
