Started adding media queries for 768 and 1200

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <main>
     <section class="hero-area">
       <div class="contact-wrapper">
-        <h1> Hi! What can I <span>code</span> for you today?</h1>
+        <h1>What can I <span>code</span> for you today?</h1>
       </div>
     </section>
     <section id="portfolio">
