Changed html to web developer. Modified p width in About section to fit with image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <header>
       <div class="content-wrapper">
-        <h3>nik payton | web designer</h3>
+        <h3>nik payton | web developer</h3>
         <div class="header-divider"></div>
         <nav>
           <ul>
