--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <div class="header-divider"></div>
         <nav>
           <ul>
-            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="#portfolio">projects</a></li>
+            <li><a href="#skills">skills</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#contact">contact</a></li>
           </ul>
@@ -50,7 +51,7 @@
     <section id="portfolio">
       <section class ="portfolio-area">
         <div class="content-wrapper">
-          <h3>My Portfolio</h3>
+          <h2>Projects</h2>
 
           <div class="rogue">
             <article>
@@ -96,42 +97,69 @@
       </section>
     </section>
 
+    <div class="header-divider"></div>
+
+    <section id="skills">
+      <section class="skills-area">
+        <div class="content-wrapper">
+          <h2>Skills</h2>
+          <h4>Developer Skills</h4>
+          <div class="language-wrapper">
+            <p class="skill">Html and CSS</p>
+            <p class="skill">Javascript</p>
+            <p class="skill">React</p>
+            <p class="skill">Responsive Web Development</p>
+            <p class="skill">Git and Github</p>
+          </div>
+
+          <h4>Tech Stack</h4>
+          <div class="tool-wrapper">
+            <p class="tool">Chrome Devtools</p>
+            <p class="tool">Github Pages</p>
+            <p class="tool">Adobe Photoshop</p>
+          </div>
+        </div>
+      </section>
+    </section>
+
     <section id="about">
       <section class="about-area">
         <div class="content-wrapper">
-          <h3>About Me</h3>
+          <h2>About Me</h2>
           <h4>I love creating and coding things!</h4>
-          <p>Hi! I’m Nik, a British jazz musician and web developer currently living in Brazil. I’ve toured extensively throughout Europe and the Americas, been an Artistic Director (of one of the biggest jazz festivals in Brazil), and an English instructor.<br />
+          <p>Hi! I’m Nik, a British jazz musician and front end web developer currently living in Brazil. I’ve toured extensively throughout Europe and the Americas, been an Artistic Director (of one of the biggest jazz festivals in Brazil), and an English instructor.<br />
           I have an obsessive need to learn new things, and the pandemic gave me the chance to finally learn to code with Skillcrush. I love nothing more than being challenged, and I’m very focused and persistent when it comes to work. So, whatever your web needs are, I can create the perfect solution for you!</p>
         </div>
       </section>
     </section>
   </main>
 
-  <footer>
-    <section id="contact">
-      <div class="content-wrapper">
+  <footer id="contact">
+    <div class="content-wrapper">
+      <div class="contact-wrapper">
         <div class="footer-content">
           <h2>Let's Talk!</h2>
-          <div class="contact">
-            <h4>Hire me</h4>
+          <div class="contact-info">
+             <h4>Hire me</h4>
             <address>
               <p>nik [@] nikpayton.com</p>
             </address>
-          </div>
-          
+        </div>
+
           <div class="social">
             <h4>Social</h4>
-            <div class="social-icons">
-              <p>
-                <a href="https://www.linkedin.com/in/nikpayton/" target="_blank"><i class="fab fa-linkedin"></i></a>
-              </p>
-              <p>
-                <a href="https://twitter.com/nikpayton" target="_blank"><i class="fab fa-twitter"></i></a>
-              </p>
-              <p>
-                <a href="https://github.com/niko1402" target="_blank"><i class="fab fa-github"></i></a>
-              </p>
+            <div class="follow-section">
+              <ul class="social-icons">
+                <li>
+                  <a href="https://www.linkedin.com/in/nikpayton/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/nikpayton" target="_blank"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="https://github.com/niko1402" target="_blank"><i class="fab fa-github"></i></a>
+                </li>
+            </ul>
             </div>
           </div>
         </div>
@@ -139,7 +167,7 @@
       <div class="copyright">
         <p> Copyright 2021 | Nik Payton</p>
       </div>
-    </section>
+    </div>
   </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
