Added new images for the projects section. Added a 'portfolio-piece' class. Changed some fonts to em.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <script src="https://kit.fontawesome.com/0d89128a85.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
 </head>
+
   <!-- Add your site or application content here -->
+
 <body>
  
     <header>
@@ -48,55 +50,83 @@
         <h1>What can I <span>code</span> for you today?</h1>
       </div>
     </section>
+
     <section id="portfolio">
       <section class ="portfolio-area">
         <div class="content-wrapper">
           <h2>Projects</h2>
-
-          <div class="rogue">
+          <div class="portfolio-piece">
             <article>
               <figure>
-                <img src="img/rogue.png" alt="Rogue Pickings Website" />
+                <img src="img/rogue.png" alt="Sticky Note App" />
               </figure>
               <div>
-                <h4>Rogue Pickings Website</h4>
-                <p>HTML and CSS from a Photoshop design comp</p>
-                <p>A responsive, one-page site.</p>
+                <h4>Super Sticky Notes</h4>
+                  <p>A Greenfield project using multiple components to create a classic sticky note UI. Includes the ability to add, delete, edit and search notes. <br>
+                    <strong>Skills:</strong>React, JSX, Components<br>
+                    <strong>Tools:</strong>State, Props and CodeSandbox
+                  </p>
               </div>
             </article>
           </div>
           <div class="header-divider"></div>
 
-          <div class="recipe">
+          <div class="portfolio-piece">
             <article>
+              <figure>
+                <img src="img/guess-the-word.png" alt="Guess the Word game" />
+              </figure>
               <div>
-                <h4>Recipe Collection</h4>
+                <h4>Guess the Word!</h4>
                 <p>An HTML5 and CSS exercise</p>
                 <p>A simple, one-page recipe card coded in html5 and css, from a design guide and an image guide. This was one of the first sites I coded.</p>
               </div>
-              <figure>
-              <img src="img/recipe1.png" alt="Recipe Collection Cards" />
-              </figure>
             </article>
           </div>
           <div class="header-divider"></div>
 
-          <div class="unplugged">
+          <div class="portfolio-piece">
             <article>
               <figure>
-                <img src="img/unplugged.png" alt="Unplugged Retreat Website" />
+                <img src="img/github-repo.png" alt="Github Repo Page" />
               </figure>
               <div>
-                <h4>Unplugged Retreat Website</h4>
+                <h4>Github Repo Gallery</h4>
                 <p>HTML5 and CSS from a photoshop comp</p>
                 <p>A mobile-first, 3-page, fully responsive website, coded from scratch from a psd design comp. I had a lot of fun coding this project!</p>
               </div>
             </article>
           </div>
+
+          <div class="portfolio-piece">
+            <article>
+              <figure>
+                <img src="img/unplugged-1.png" alt="Unplugged Retreat Page" />
+              </figure>
+              <div>
+                <h4>Unplugged</h4>
+                <p>HTML5 and CSS from a photoshop comp</p>
+                <p>A mobile-first, 3-page, fully responsive website, coded from scratch from a psd design comp. I had a lot of fun coding this project!</p>
+              </div>
+            </article>
+          </div>
+
+          <div class="portfolio-piece">
+            <article>
+              <figure>
+                <img src="img/rogue.png" alt="Rogue Pickings Site" />
+              </figure>
+              <div>
+                <h4>Rogue Pickings</h4>
+                <p>HTML5 and CSS from a photoshop comp</p>
+                <p>A mobile-first, 3-page, fully responsive website, coded from scratch from a psd design comp. I had a lot of fun coding this project!</p>
+              </div>
+            </article>
+          </div>
+          
         </div>
       </section>
     </section>
-
     <div class="header-divider"></div>
 
     <section id="skills">
