Added a 'Live Page' button to html file, and '.preview' class in css.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     <strong>Skills:</strong>React, JSX, Components<br>
                     <strong>Tools:</strong>State, Props and CodeSandbox
                   </p>
+                  <button class="preview">Live Page</button>
               </div>
             </article>
           </div>
@@ -80,6 +81,7 @@
                 <h4>Guess the Word!</h4>
                 <p>An HTML5 and CSS exercise</p>
                 <p>A simple, one-page recipe card coded in html5 and css, from a design guide and an image guide. This was one of the first sites I coded.</p>
+                <button class="preview">Live Page</button>
               </div>
             </article>
           </div>
@@ -94,6 +96,7 @@
                 <h4>Github Repo Gallery</h4>
                 <p>HTML5 and CSS from a photoshop comp</p>
                 <p>A mobile-first, 3-page, fully responsive website, coded from scratch from a psd design comp. I had a lot of fun coding this project!</p>
+                <button class="preview">Live Page</button>
               </div>
             </article>
           </div>
@@ -107,6 +110,7 @@
                 <h4>Unplugged</h4>
                 <p>HTML5 and CSS from a photoshop comp</p>
                 <p>A mobile-first, 3-page, fully responsive website, coded from scratch from a psd design comp. I had a lot of fun coding this project!</p>
+                <button class="preview">Live Page</button>
               </div>
             </article>
           </div>
@@ -120,6 +124,7 @@
                 <h4>Rogue Pickings</h4>
                 <p>HTML5 and CSS from a photoshop comp</p>
                 <p>A mobile-first, 3-page, fully responsive website, coded from scratch from a psd design comp. I had a lot of fun coding this project!</p>
+                <button class="preview">Live Page</button>
               </div>
             </article>
           </div>
