Added sticky-note screen shot. Rewrote some of the project's text

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
           <div class="portfolio-piece">
             <article>
               <figure>
-                <img src="img/rogue.png" alt="Sticky Note App" />
+                <img src="img/sticky-note.png" alt="Sticky Note App" />
               </figure>
               <div>
                 <h4>Super Sticky Notes</h4>
                   <p>A Greenfield project using multiple components to create a classic sticky note UI. Includes the ability to add, delete, edit and search notes. <br>
-                    <strong>Skills:</strong>React, JSX, Components<br>
-                    <strong>Tools:</strong>State, Props and CodeSandbox
+                    <strong>Skills: </strong>React, JSX, Components<br>
+                    <strong>Tools: </strong>State, Props and CodeSandbox
                   </p>
                   <button class="preview">Live Page</button>
               </div>
@@ -80,7 +80,7 @@
               <div>
                 <h4>Guess the Word!</h4>
                 <p>An HTML5 and CSS exercise</p>
-                <p>A simple, one-page recipe card coded in html5 and css, from a design guide and an image guide. This was one of the first sites I coded.</p>
+                <p>Players try to guess the word, one letter at a time. If they correctly guess, without using up all of their chances, they win! </p>
                 <button class="preview">Live Page</button>
               </div>
             </article>
