Changed text for Unplugged preview. Took away button to see how it looks.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Signika+Negative:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Signika+Negative:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <!-- Font Awesome Icons-->
@@ -66,7 +66,7 @@
                     <strong>Skills: </strong>React, JSX, Components<br>
                     <strong>Tools: </strong>State, Props and CodeSandbox
                   </p>
-                  <button class="preview">Live Page</button>
+                  <a href="https://fty3y.csb.app/" target="_blank">Live Page</a>
               </div>
             </article>
           </div>
@@ -79,9 +79,8 @@
               </figure>
               <div>
                 <h4>Guess the Word!</h4>
-                <p>An HTML5 and CSS exercise</p>
                 <p>Players try to guess the word, one letter at a time. If they correctly guess, without using up all of their chances, they win! </p>
-                <button class="preview">Live Page</button>
+                <a class="preview">Live Page</a>
               </div>
             </article>
           </div>
@@ -94,8 +93,7 @@
               </figure>
               <div>
                 <h4>Github Repo Gallery</h4>
-                <p>HTML5 and CSS from a photoshop comp</p>
-                <p>A mobile-first, 3-page, fully responsive website, coded from scratch from a psd design comp. I had a lot of fun coding this project!</p>
+                <p>A gallery of repos, created using GitHub's API to pull data from my GitHub portfolio. Click on the repo name to get more details and a link to the repository, or search for specific repos.</p>
                 <button class="preview">Live Page</button>
               </div>
             </article>
@@ -108,8 +106,7 @@
               </figure>
               <div>
                 <h4>Unplugged</h4>
-                <p>HTML5 and CSS from a photoshop comp</p>
-                <p>A mobile-first, 3-page, fully responsive website, coded from scratch from a psd design comp. I had a lot of fun coding this project!</p>
+                <p>A mobile-first, multi-page, fully responsive website, coded with Flexbox. This is a very versatile design that can be repurposed for various scenarios.</p>
                 <button class="preview">Live Page</button>
               </div>
             </article>
@@ -122,8 +119,7 @@
               </figure>
               <div>
                 <h4>Rogue Pickings</h4>
-                <p>HTML5 and CSS from a photoshop comp</p>
-                <p>A mobile-first, 3-page, fully responsive website, coded from scratch from a psd design comp. I had a lot of fun coding this project!</p>
+                <p>A simple one-page site that would be great for a local café or a food stand. The orginal was a static website, which I converted into a responsive design using Flexbox.</p>
                 <button class="preview">Live Page</button>
               </div>
             </article>
