Put the button back again. Created a 'preview-link' class to style button

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
               </figure>
               <div>
                 <h4>Super Sticky Notes</h4>
-                  <p>A Greenfield project using multiple components to create a classic sticky note UI. Includes the ability to add, delete, edit and search notes. <br>
-                    <strong>Skills: </strong>React, JSX, Components<br>
-                    <strong>Tools: </strong>State, Props and CodeSandbox
-                  </p>
-                  <a href="https://fty3y.csb.app/" target="_blank">Live Page</a>
+                  <p class="project-description">A Greenfield project using multiple components to create a classic sticky note UI. You can easily add, delete, edit and search notes. </p>
+                  <p><span>Skills: </span>
+                      React, JSX, Components</p>
+                  <p><span>Tools: </span>
+                      " State, Props and CodeSandbox" </p>
+                  <button class="preview-link">Live Page</button>
               </div>
             </article>
           </div>
-          <div class="header-divider"></div>
 
           <div class="portfolio-piece">
             <article>
@@ -79,12 +79,15 @@
               </figure>
               <div>
                 <h4>Guess the Word!</h4>
-                <p>Players try to guess the word, one letter at a time. If they correctly guess, without using up all of their chances, they win! </p>
-                <a class="preview">Live Page</a>
+                  <p class="project-description">Players try to guess the word, one letter at a time. If they correctly guess, without using up all of their chances, they win! </p>
+                  <p><span>Skills: </span>
+                  React, JSX, Components</p>
+                  <p><span>Tools: </span>
+                  State, Props and CodeSandbox</p>
+                  <button class="preview-link">Live Page</button>
               </div>
             </article>
           </div>
-          <div class="header-divider"></div>
 
           <div class="portfolio-piece">
             <article>
@@ -93,8 +96,12 @@
               </figure>
               <div>
                 <h4>Github Repo Gallery</h4>
-                <p>A gallery of repos, created using GitHub's API to pull data from my GitHub portfolio. Click on the repo name to get more details and a link to the repository, or search for specific repos.</p>
-                <button class="preview">Live Page</button>
+                  <p class="project-description">A gallery of repos, created using GitHub's API to pull data from my GitHub portfolio. Click on the repo name to get more details and a link to the repository, or search for specific repos.</p>
+                  <p><span>Skills: </span>
+                  React, JSX, Components</p>
+                  <p><span>Tools: </span>
+                  State, Props and CodeSandbox</p>
+                  <button class="preview-link">Live Page</button>
               </div>
             </article>
           </div>
@@ -106,9 +113,13 @@
               </figure>
               <div>
                 <h4>Unplugged</h4>
-                <p>A mobile-first, multi-page, fully responsive website, coded with Flexbox. This is a very versatile design that can be repurposed for various scenarios.</p>
-                <button class="preview">Live Page</button>
-              </div>
+                  <p class ="project-description">A mobile-first, multi-page, fully responsive website, coded with Flexbox. This is a very versatile design that can be repurposed for various scenarios.</p>
+                  <p><span>Skills: </span>
+                    React, JSX, Components</p>
+                  <p><span>Tools: </span>
+                    State, Props and CodeSandbox</p>
+                    <button class="preview-link">Live Page</button>
+                  </div>
             </article>
           </div>
 
@@ -119,9 +130,13 @@
               </figure>
               <div>
                 <h4>Rogue Pickings</h4>
-                <p>A simple one-page site that would be great for a local café or a food stand. The orginal was a static website, which I converted into a responsive design using Flexbox.</p>
-                <button class="preview">Live Page</button>
-              </div>
+                  <p class="project-description">A simple one-page site that would be great for a local café or a food stand. The orginal was a static website, which I converted into a responsive design using Flexbox.</p>
+                  <p><span>Skills: </span>
+                    React, JSX, Components</p>
+                  <p><span>Tools: </span>
+                    State, Props and CodeSandbox</p>
+                    <button class="preview-link">Live Page</button>
+                  </div>
             </article>
           </div>
           
