Organised css code a bit. Changed some skill-area to #skills. Took out button again and replaced with <a>.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
     </section>
 
     <section id="portfolio">
-      <section class ="portfolio-area">
         <div class="content-wrapper">
           <h2>Projects</h2>
           <div class="portfolio-piece">
@@ -67,7 +66,7 @@
                       React, JSX, Components</p>
                   <p><span>Tools: </span>
                       " State, Props and CodeSandbox" </p>
-                  <button class="preview-link">Live Page</button>
+                  <a class="project-link">Live Page</a>
               </div>
             </article>
           </div>
@@ -84,7 +83,7 @@
                   React, JSX, Components</p>
                   <p><span>Tools: </span>
                   State, Props and CodeSandbox</p>
-                  <button class="preview-link">Live Page</button>
+                  <a class="project-link">Live Page</a>
               </div>
             </article>
           </div>
@@ -101,7 +100,7 @@
                   React, JSX, Components</p>
                   <p><span>Tools: </span>
                   State, Props and CodeSandbox</p>
-                  <button class="preview-link">Live Page</button>
+                  <a class="project-link">Live Page</a>
               </div>
             </article>
           </div>
@@ -118,7 +117,7 @@
                     React, JSX, Components</p>
                   <p><span>Tools: </span>
                     State, Props and CodeSandbox</p>
-                    <button class="preview-link">Live Page</button>
+                    <a class="project-link">Live Page</a>
                   </div>
             </article>
           </div>
@@ -135,7 +134,7 @@
                     React, JSX, Components</p>
                   <p><span>Tools: </span>
                     State, Props and CodeSandbox</p>
-                    <button class="preview-link">Live Page</button>
+                    <a class="project-link">Live Page</a>
                   </div>
             </article>
           </div>
