Took out <article> for each project, and added 1 <article class> for the whole projects section. Renamed #portfolio to #projects, deleted portfolio-area and replaced with portfolio-wrapper.

--- a/index.html
+++ b/index.html
@@ -51,28 +51,27 @@
       </div>
     </section>
 
-    <section id="portfolio">
+    <article class="portfolio">
+      <section id="projects">
         <div class="content-wrapper">
           <h2>Projects</h2>
-          <div class="portfolio-piece">
-            <article>
-              <figure>
-                <img src="img/sticky-note.png" alt="Sticky Note App" />
-              </figure>
-              <div>
-                <h4>Super Sticky Notes</h4>
-                  <p class="project-description">A Greenfield project using multiple components to create a classic sticky note UI. You can easily add, delete, edit and search notes. </p>
-                  <p><span>Skills: </span>
+          <div class="portfolio-wrapper">
+              <div class="portfolio-piece">
+                <figure>
+                  <img src="img/sticky-note.png" alt="Sticky Note App" />
+                </figure>
+                <div>
+                  <h4>Super Sticky Notes</h4>
+                    <p class="project-description">A Greenfield project using multiple components to create a classic sticky note UI. You can easily add, delete, edit and search notes. </p>
+                    <p><span>Skills: </span>
                       React, JSX, Components</p>
-                  <p><span>Tools: </span>
-                      " State, Props and CodeSandbox" </p>
-                  <a class="project-link">Live Page</a>
-              </div>
-            </article>
-          </div>
+                    <p><span>Tools: </span>
+                      State, Props and CodeSandbox </p>
+                    <a class="project-link">Live Page</a>
+                </div>
+            </div>
 
-          <div class="portfolio-piece">
-            <article>
+            <div class="portfolio-piece">
               <figure>
                 <img src="img/guess-the-word.png" alt="Guess the Word game" />
               </figure>
@@ -85,11 +84,9 @@
                   State, Props and CodeSandbox</p>
                   <a class="project-link">Live Page</a>
               </div>
-            </article>
-          </div>
+            </div>
 
-          <div class="portfolio-piece">
-            <article>
+            <div class="portfolio-piece">
               <figure>
                 <img src="img/github-repo.png" alt="Github Repo Page" />
               </figure>
@@ -102,11 +99,9 @@
                   State, Props and CodeSandbox</p>
                   <a class="project-link">Live Page</a>
               </div>
-            </article>
-          </div>
+            </div>
 
-          <div class="portfolio-piece">
-            <article>
+            <div class="portfolio-piece">
               <figure>
                 <img src="img/unplugged-1.png" alt="Unplugged Retreat Page" />
               </figure>
@@ -117,13 +112,11 @@
                     React, JSX, Components</p>
                   <p><span>Tools: </span>
                     State, Props and CodeSandbox</p>
-                    <a class="project-link">Live Page</a>
-                  </div>
-            </article>
-          </div>
+                  <a class="project-link">Live Page</a>
+              </div>
+            </div>
 
-          <div class="portfolio-piece">
-            <article>
+            <div class="portfolio-piece">
               <figure>
                 <img src="img/rogue.png" alt="Rogue Pickings Site" />
               </figure>
@@ -134,17 +127,14 @@
                     React, JSX, Components</p>
                   <p><span>Tools: </span>
                     State, Props and CodeSandbox</p>
-                    <a class="project-link">Live Page</a>
-                  </div>
-            </article>
+                  <a class="project-link">Live Page</a>
+              </div>
+            </div>
           </div>
-          
         </div>
       </section>
-    </section>
-    <div class="header-divider"></div>
 
-    <section id="skills">
+      <section id="skills">
       <section class="skills-area">
         <div class="content-wrapper">
           <h2>Skills</h2>
@@ -165,7 +155,7 @@
           </div>
         </div>
       </section>
-    </section>
+    </article>
 
     <section id="about">
       <section class="about-area">
