--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="header-divider"></div>
         <nav>
           <ul>
-            <li><a href="#portfolio">projects</a></li>
+            <li><a href="#projects">projects</a></li>
             <li><a href="#skills">skills</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#contact">contact</a></li>
@@ -60,7 +60,6 @@
                 <figure>
                   <img src="img/sticky-note.png" alt="Sticky Note App" />
                 </figure>
-                <div>
                   <h4>Super Sticky Notes</h4>
                     <p class="project-description">A Greenfield project using multiple components to create a classic sticky note UI. You can easily add, delete, edit and search notes. </p>
                     <p><span>Skills: </span>
@@ -68,14 +67,12 @@
                     <p><span>Tools: </span>
                       State, Props and CodeSandbox </p>
                     <a class="project-link">Live Page</a>
-                </div>
             </div>
 
             <div class="portfolio-piece">
               <figure>
                 <img src="img/guess-the-word.png" alt="Guess the Word game" />
               </figure>
-              <div>
                 <h4>Guess the Word!</h4>
                   <p class="project-description">Players try to guess the word, one letter at a time. If they correctly guess, without using up all of their chances, they win! </p>
                   <p><span>Skills: </span>
@@ -83,14 +80,12 @@
                   <p><span>Tools: </span>
                   State, Props and CodeSandbox</p>
                   <a class="project-link">Live Page</a>
-              </div>
             </div>
 
             <div class="portfolio-piece">
               <figure>
                 <img src="img/github-repo.png" alt="Github Repo Page" />
               </figure>
-              <div>
                 <h4>Github Repo Gallery</h4>
                   <p class="project-description">A gallery of repos, created using GitHub's API to pull data from my GitHub portfolio. Click on the repo name to get more details and a link to the repository, or search for specific repos.</p>
                   <p><span>Skills: </span>
@@ -98,14 +93,12 @@
                   <p><span>Tools: </span>
                   State, Props and CodeSandbox</p>
                   <a class="project-link">Live Page</a>
-              </div>
             </div>
 
             <div class="portfolio-piece">
               <figure>
                 <img src="img/unplugged-1.png" alt="Unplugged Retreat Page" />
               </figure>
-              <div>
                 <h4>Unplugged</h4>
                   <p class ="project-description">A mobile-first, multi-page, fully responsive website, coded with Flexbox. This is a very versatile design that can be repurposed for various scenarios.</p>
                   <p><span>Skills: </span>
@@ -113,14 +106,12 @@
                   <p><span>Tools: </span>
                     State, Props and CodeSandbox</p>
                   <a class="project-link">Live Page</a>
-              </div>
             </div>
 
             <div class="portfolio-piece">
               <figure>
                 <img src="img/rogue.png" alt="Rogue Pickings Site" />
               </figure>
-              <div>
                 <h4>Rogue Pickings</h4>
                   <p class="project-description">A simple one-page site that would be great for a local café or a food stand. The orginal was a static website, which I converted into a responsive design using Flexbox.</p>
                   <p><span>Skills: </span>
@@ -128,12 +119,13 @@
                   <p><span>Tools: </span>
                     State, Props and CodeSandbox</p>
                   <a class="project-link">Live Page</a>
-              </div>
             </div>
           </div>
         </div>
       </section>
 
+      <hr class="header-divider">
+      
       <section id="skills">
       <section class="skills-area">
         <div class="content-wrapper">
