Added a :hover color for the nav links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>nik payton | web developer</h3>
         <div class="header-divider"></div>
         <nav>
-          <ul>
+          <ul class="navigation">
             <li><a href="#projects">projects</a></li>
             <li><a href="#skills">skills</a></li>
             <li><a href="#about">about</a></li>
@@ -125,7 +125,7 @@
       </section>
 
       <hr class="header-divider">
-      
+
       <section id="skills">
       <section class="skills-area">
         <div class="content-wrapper">
