Changed Social to Follow Me, added a <p> underneath. Took out the margin for social h4 and added it to social p.

--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
         </div>
 
           <div class="social">
-            <h4>Social</h4>
+            <h4>Follow Me</h4>
+            <p>(but no stalking!)</p>
             <div class="follow-section">
               <ul class="social-icons">
                 <li>
