Changed contact headings to h3 and h5. Made email address the gold colour. Changed the footer padding to 80px (top).

--- a/index.html
+++ b/index.html
@@ -165,16 +165,16 @@
     <div class="content-wrapper">
       <div class="contact-wrapper">
         <div class="footer-content">
-          <h2>Let's Talk!</h2>
+          <h3>Let's Talk!</h3>
           <div class="contact-info">
-             <h4>Hire me</h4>
+             <h5>Hire me</h5>
             <address>
               <p>nik [@] nikpayton.com</p>
             </address>
         </div>
 
           <div class="social">
-            <h4>Follow Me</h4>
+            <h5>Follow me</h5>
             <p>(but no stalking!)</p>
             <div class="follow-section">
               <ul class="social-icons">
