--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <hr class="header-divider">
 
       <section id="skills">
-      <section class="skills-area">
+      <!-- <section class="skills-area"> -->
         <div class="content-wrapper">
           <h2>Skills</h2>
           <h4>Developer Skills</h4>
@@ -163,18 +163,18 @@
 
   <footer id="contact">
     <div class="content-wrapper">
-      <div class="contact-wrapper">
-        <div class="footer-content">
+        <!-- <div class="footer-content"> -->
           <h3>Let's Talk!</h3>
+        <div class="contact-wrapper">
           <div class="contact-info">
-             <h5>Hire me</h5>
+             <h5 class="contact-title">Hire me</h5>
             <address>
               <p>nik [@] nikpayton.com</p>
             </address>
-        </div>
+          </div>
 
-          <div class="social">
-            <h5>Follow me</h5>
+          <div class="contact-info social">
+            <h5 class="contact-title">Follow me</h5>
             <p>(but no stalking!)</p>
             <div class="follow-section">
               <ul class="social-icons">
@@ -195,7 +195,7 @@
       <div class="copyright">
         <p> Copyright 2021 | Nik Payton</p>
       </div>
-    </div>
+    <!-- </div> -->
   </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
