Resized images to all be equal. Changed html unplugged img link to new version (no -1).

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <div class="portfolio-piece">
               <figure>
-                <img src="img/unplugged-1.png" alt="Unplugged Retreat Page" />
+                <img class="contain" src="img/unplugged.png" alt="Unplugged Retreat Page" />
               </figure>
                 <h4>Unplugged</h4>
                   <p class ="project-description">A mobile-first, multi-page, fully responsive website, coded with Flexbox. This is a very versatile design that can be repurposed for various scenarios.</p>
