Added skill-list, skill-item and skill-item-name to html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <img src="img/github-repo.png" alt="Github Repo Page" />
               </figure>
                 <h4>Github Repo Gallery</h4>
-                  <p class="project-description">A gallery of repos, created using GitHub's API to pull data from my GitHub portfolio. Click on the repo name to get more details and a link to the repository, or search for specific repos.</p>
+                  <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search for a specific repo, or click on one for more details and a link to the repository.</p>
                   <p><span>Skills: </span>
                   React, JSX, Components</p>
                   <p><span>Tools: </span>
@@ -124,27 +124,44 @@
         </div>
       </section>
 
-      <hr class="header-divider">
+      <!-- <hr class="header-divider"> -->
 
       <section id="skills">
-      <!-- <section class="skills-area"> -->
         <div class="content-wrapper">
           <h2>Skills</h2>
           <h4>Developer Skills</h4>
-          <div class="language-wrapper">
-            <p class="skill">Html and CSS</p>
-            <p class="skill">Javascript</p>
-            <p class="skill">React</p>
-            <p class="skill">Responsive Web Development</p>
-            <p class="skill">Git and Github</p>
-          </div>
-
-          <h4>Tech Stack</h4>
-          <div class="tool-wrapper">
-            <p class="tool">Chrome Devtools</p>
-            <p class="tool">Github Pages</p>
-            <p class="tool">Adobe Photoshop</p>
-          </div>
+          <ul class="skill-list">
+            <li class="skill-item">
+              <p class="skill-item-name">Html</p>
+            </li>
+            <li class="skill-item">
+              <p class="skill-item-name">Css</p>
+            </li>
+            <li class="skill-item">
+              <p class="skill-item-name">Javascript</p>
+            </li>
+            <li class="skill-item">
+              <p class="skill-item-name">React</p>
+            </li>
+            <li class="skill-item">
+              <p class="skill-item-name">Responsive Web Development</p>
+            </li>
+            <li class="skill-item">
+              <p class="skill-item-name">Git</p>
+            </li>
+            <li class="skill-item">
+              <p class="skill-item-name">Github</p>
+            </li>
+            <li class="skill-item">
+              <p class="skill-item-name">Chrome Devtools</p>
+            </li>
+            <li class="skill-item">
+              <p class="skill-item-name">Github Pages</p>
+            </li>
+            <li class="skill-item">
+              <p class="skill-item-name">Adobe Photoshop</p>
+            </li>
+          </ul>
         </div>
       </section>
     </article>
@@ -186,13 +203,13 @@
                 <li>
                   <a href="https://github.com/niko1402" target="_blank"><i class="fab fa-github"></i></a>
                 </li>
-            </ul>
+              </ul>
             </div>
           </div>
         </div>
       </div> <!--- Footer Content ends here --->
       <div class="copyright">
-        <p> Copyright 2021 | Nik Payton</p>
+        <p> Copyright 2022 | Nik Payton</p>
       </div>
     <!-- </div> -->
   </footer>
