--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
                     <p class="project-description">A Greenfield project using multiple components to create a classic sticky note UI. You can easily add, delete, edit and search notes. </p>
                     <p><span>Skills: </span>
                       React, JSX, Components</p>
-                    <p><span>Tools: </span>
-                      State, Props and CodeSandbox </p>
                     <a class="project-link">Live Page</a>
             </div>
 
@@ -77,8 +75,6 @@
                   <p class="project-description">Players try to guess the word, one letter at a time. If they correctly guess, without using up all of their chances, they win! </p>
                   <p><span>Skills: </span>
                   React, JSX, Components</p>
-                  <p><span>Tools: </span>
-                  State, Props and CodeSandbox</p>
                   <a class="project-link">Live Page</a>
             </div>
 
@@ -90,8 +86,6 @@
                   <p class="project-description">Created using GitHub's API to pull data from my GitHub portfolio. Search for a specific repo, or click on one for more details and a link to the repository.</p>
                   <p><span>Skills: </span>
                   React, JSX, Components</p>
-                  <p><span>Tools: </span>
-                  State, Props and CodeSandbox</p>
                   <a class="project-link">Live Page</a>
             </div>
 
@@ -100,11 +94,9 @@
                 <img class="contain" src="img/unplugged.png" alt="Unplugged Retreat Page" />
               </figure>
                 <h4>Unplugged</h4>
-                  <p class ="project-description">A mobile-first, multi-page, fully responsive website, coded with Flexbox. This is a very versatile design that can be repurposed for various scenarios.</p>
+                  <p class ="project-description">A multi-page, responsive website that adapts to mobile, tablet and desktop screens. A versatile design that can be repurposed for various scenarios.</p>
                   <p><span>Skills: </span>
-                    React, JSX, Components</p>
-                  <p><span>Tools: </span>
-                    State, Props and CodeSandbox</p>
+                    HTML, CSS, JS</p>
                   <a class="project-link">Live Page</a>
             </div>
 
@@ -113,11 +105,9 @@
                 <img src="img/rogue.png" alt="Rogue Pickings Site" />
               </figure>
                 <h4>Rogue Pickings</h4>
-                  <p class="project-description">A simple one-page site that would be great for a local café or a food stand. The orginal was a static website, which I converted into a responsive design using Flexbox.</p>
+                  <p class="project-description">A simple one-page site that would be great for a local café or a food stand. Converted from a static website into a responsive design using Flexbox.</p>
                   <p><span>Skills: </span>
-                    React, JSX, Components</p>
-                  <p><span>Tools: </span>
-                    State, Props and CodeSandbox</p>
+                    HTML, CSS, Photoshop</p>
                   <a class="project-link">Live Page</a>
             </div>
           </div>
@@ -129,7 +119,7 @@
       <section id="skills">
         <div class="content-wrapper">
           <h2>Skills</h2>
-          <h4>Developer Skills</h4>
+          <!-- <h4>Developer Skills</h4> -->
           <ul class="skill-list">
             <li class="skill-item">
               <p class="skill-item-name">Html</p>
