Removed the .contain class on the unplugged image.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <div class="portfolio-piece">
               <figure>
-                <img class="contain" src="img/unplugged.png" alt="Unplugged Retreat Page" />
+                <img src="img/unplugged.png" alt="Unplugged Retreat Page" />
               </figure>
                 <h4>Unplugged</h4>
                   <p class ="project-description">A multi-page, responsive website that adapts to mobile, tablet and desktop screens. A versatile design that can be repurposed for various scenarios.</p>
